Added conference announcements, including a nice big red special box near the top of the page...
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5244 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/website/images/ofbws.css
+++ b/website/images/ofbws.css
@@ -278,10 +278,13 @@ font-family: Verdana, Arial, Helvetica, sans-serif;
 }
 
 
-#intro, #users, #announcements, #inthenews, #testimonials, #projects-standards {
+#special, #intro, #users, #announcements, #inthenews, #testimonials, #projects-standards {
 margin: 0px 0px 10px 0px;
 padding: 5px;
 border: #999999 dotted 1px;
+}
+#special {
+background: #EE9999;
 }
 #intro {
 background: #E6EEE7;
