--- a/framework/images/webapp/images/maincss.css
+++ b/framework/images/webapp/images/maincss.css
@@ -321,7 +321,27 @@ text-decoration: none;
 color: #333333;
 }
 
+A.buttontext, .buttontextdisabled {
+font-family: Verdana, Arial, Helvetica, sans-serif;
+font-size: 10px;
+font-weight: bold;
+text-decoration: none;
+background: white;
+border: #999999 solid 1px;
+margin: 2px 5px 2px 5px;
+padding: 1px 4px 1px 4px;
+}
+
 A.buttontext {
+color: #000099;
+}
+
+A.buttontext:hover {
+color: red;
+text-decoration: underline;
+}
+
+A.linktext {
 font-family: Verdana, Arial, Helvetica, sans-serif;
 font-size: 10px;
 font-weight: bold;
@@ -329,9 +349,13 @@ text-decoration: none;
 color: #000099;
 }
 
-A.buttontext:hover {
-color: #000099;
+A.linktext:hover {
+color: red;
 text-decoration: underline;
+}
+
+.buttontextdisabled {
+color: #333333;
 }
 
 A.headerbuttontext {
@@ -346,14 +370,6 @@ color: #000099;
 A.headerbuttontext:hover {
 color: black;
 text-decoration: underline;
-}
-
-.buttontextdisabled {
-font-family: Verdana, Arial, Helvetica, sans-serif;
-font-size: 10px;
-font-weight: bold;
-text-decoration: none;
-color: #333333;
 }
 
 .submenutextinfo {
@@ -778,24 +794,36 @@ font-family: Verdana, Arial, Helvetica, sans-serif;
 background: #FFFFFF;
 font-size: 8pt;
 font-family: Verdana, Arial, Helvetica, sans-serif;
+background: white;
+border: #999999 solid 1px;
+margin: 2px;
 }
 
 .inputBox {
 font-family: Verdana, Arial, Helvetica, sans-serif;
 background: #FFFFFF;
 font-size: 8pt;
+background: white;
+border: #999999 solid 1px;
+margin: 2px;
 }
 
 .selectBox {
 font-family: Verdana, Arial, Helvetica, sans-serif;
 background: #FFFFFF;
 font-size: 8pt;
+background: white;
+border: #999999 solid 1px;
+margin: 2px;
 }
 
 .textAreaBox {
 font-family: Verdana, Arial, Helvetica, sans-serif;
 background: #FFFFFF;
 font-size: 8pt;
+background: white;
+border: #999999 solid 1px;
+margin: 2px;
 }
 
 .radioButton {
@@ -818,6 +846,7 @@ text-decoration: none;
 color: #000099;
 background: white;
 border: #999999 solid 1px;
+margin: 2px;
 }
 
 .mediumSubmit,.largeSubmit,.loginButton {
@@ -828,10 +857,12 @@ text-decoration: none;
 color: #000099;
 background: white;
 border: #999999 solid 1px;
+margin: 2px;
 }
 
 .smallSubmit:hover,.mediumSubmit:hover,.largeSubmit:hover,.loginButton:hover {
 color: red;
+text-decoration: underline;
 }
 
 .smallAltSubmit,.mediumAltSubmit,.largeAltSubmit {
