A bunch more cleanups and extensions, including a pretty big patch from Al Byers much of which has to be manually merged, and in spite of testing there may be some issues still
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5660 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/framework/images/webapp/images/maincss.css
+++ b/framework/images/webapp/images/maincss.css
@@ -966,3 +966,17 @@ padding-top: 5px;
 border-top: #999 solid 1px;
 }
 
+.treeWrapper { 
+color:black; 
+background:#ffffff; 
+font-size:12pt; 
+font-weight:medium;
+font-family:verdana, arial, sans-serif;
+text-align:left;
+text-decoration:none;
+margin-left:12px;
+margin-top:2px;
+border-top:1px solid black;
+border-left:1px solid black;
+}
+
