A number of cleanups in style and such done while review the code
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5738 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/framework/images/webapp/images/ecommain.css
+++ b/framework/images/webapp/images/ecommain.css
@@ -602,24 +602,25 @@ text-decoration: none;
 color: #CCCCCC;
 }
 
-A.buttontextbig {
+A.buttontextbig, .buttontextbigdisabled {
 font-family: Verdana, Arial, Helvetica, sans-serif;
-font-size: 10pt;
+font-size: 15px;
 font-weight: bold;
 text-decoration: none;
+background: white;
+border: #999999 solid 1px;
+margin: 2px 2px 2px 2px;
+padding: 1px 4px 1px 4px;
+}
+A.buttontextbig {
 color: #000099;
 }
-
+.buttontextbigdisabled {
+color: #CCCCCC;
+}
 A.buttontextbig:hover {
 color: red;
-}
-
-.buttontextbigdisabled {
-font-family: Verdana, Arial, Helvetica, sans-serif;
-font-size: 10pt;
-font-weight: bold;
-text-decoration: none;
-color: #CCCCCC;
+text-decoration: underline;
 }
 
 A IMG.imageborder {
