--- a/framework/images/webapp/images/maincss.css
+++ b/framework/images/webapp/images/maincss.css
@@ -933,7 +933,7 @@ margin: 0px 5px 5px 0px;
 }
 .productsummary .smallimage img {
 border: #CCC solid 1px;
-width: 50px;
+height: 50px;
 }
 
 .productsummary .productbuy {
