Applied tabletextcenter.patch from Jira OFBIZ-441 from Si Chen
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6364 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/framework/images/webapp/images/maincss.css
+++ b/framework/images/webapp/images/maincss.css
@@ -95,6 +95,13 @@ font-family: Verdana, Arial, Helvettica, sans-serif;
 text-align: right;
 }
 
+.tabletextcenter {
+font-size: 10px;
+text-decoration: none;
+font-family: Verdana, Arial, Helvettica, sans-serif;
+text-align: center;
+}
+
 .tablebuttontext {
 font-size: 10px;
 color: #1E3C66;
