Applied patch from jira issue OFBIZ-2205 (Implemented recruitment in HR module).
I am committing the recently uploaded patch.
As it looks lot better from the initial one.

It may happen that I have missed some small things(It was around 5th or 7th review from my side) ... although those can be handled as reported in future.

At the end thanks to Abhinav Vaid for his contribution.

git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@776961 13f79535-47bb-0310-9956-ffa450edef68

--- a/applications/humanres/widget/forms/EmploymentAppForms.xml
+++ b/applications/humanres/widget/forms/EmploymentAppForms.xml
@@ -97,6 +97,8 @@ under the License.
             <lookup target-form-name="LookupPartyName"/>
         </field>
         <field name="referredByPartyId" use-when="referredByPartyId!=null"><hidden/></field>
+        <field name="approverPartyId"><hidden/></field>
+        <field name="jobRequisitionId"><hidden/></field>
          <field name="searchButton" widget-style="smallSubmit"><submit button-type="button"/></field>
         <field name="searchButton" widget-style="smallSubmit"><submit button-type="button"/></field>
     </form>
