Fixed: Relation Enumeration of entity JobRequisition is not unique for that entity, reported by Hans on dev mailing list. Also changed entity field names as per best practice and fixed wrong attribute names on services found by chance in the logs.
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@778587 13f79535-47bb-0310-9956-ffa450edef68

--- a/applications/humanres/widget/forms/LookupForms.xml
+++ b/applications/humanres/widget/forms/LookupForms.xml
@@ -300,7 +300,7 @@ under the License.
                 </entity-options>
             </drop-down>
         </field>
-        <field name="jobPostingTypeId">
+        <field name="jobPostingTypeEnumId">
             <drop-down allow-empty="true">
                 <entity-options entity-name="Enumeration" key-field-name="enumId" description="${description}">
                     <entity-constraint name="enumTypeId" operator="equals" value="JOB_POSTING"/>
@@ -321,7 +321,7 @@ under the License.
         <field name="jobRequisitionId" widget-style="buttontext">
             <hyperlink also-hidden="false" target-type="plain" description="${jobRequisitionId}" target="javascript:set_value('${jobRequisitionId}')"/>
         </field>
-        <field name="jobPostingTypeId"><display/></field>
+        <field name="jobPostingTypeEnumId"><display/></field>
         <field name="qualification"><display/></field>
         <field name="skillTypeId"><display/></field>
         <field name="location"><display/></field>
