--- a/applications/humanres/widget/forms/RecruitmentForms.xml
+++ b/applications/humanres/widget/forms/RecruitmentForms.xml
@@ -19,8 +19,7 @@ under the License.
 -->
 <forms xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:noNamespaceSchemaLocation="http://ofbiz.apache.org/dtds/widget-form.xsd">
-    <form name="FindJobRequisitions" type="single" target="FindJobRequisitions" default-title-style="tableheadtext"
-        default-tooltip-style="tabletext" default-widget-style="inputBox">
+    <form name="FindJobRequisitions" type="single" target="FindJobRequisitions">
         <actions>
             <set field="jobRequisitionId" from-field="parameters.jobRequisitionId"/>
         </actions>
@@ -141,8 +140,7 @@ under the License.
         <field name="submitButton" use-when="jobRequisition==null" title="Create" widget-style="smallSubmit"><submit button-type="button"/></field>
         <field name="submitButton" use-when="jobRequisition!=null" title="Update" widget-style="smallSubmit"><submit button-type="button"/></field>
     </form>
-    <form name="FindInternalJobPosting" target="FindInternalJobPosting" type="single" default-title-style="tableheadtext"
-        default-tooltip-style="tabletext" default-widget-style="inputBox">
+    <form name="FindInternalJobPosting" target="FindInternalJobPosting" type="single">
         <auto-fields-entity entity-name="EmploymentApp" default-field-type="find"/>
         <field name="applicationId"><lookup target-form-name="LookupEmploymentApp"/></field>
         <field name="applyingPartyId" use-when="hasAdminPermission"><hidden/></field>
@@ -217,8 +215,7 @@ under the License.
         <field name="submitButton" use-when="employmentApp==null" title="Create" widget-style="smallSubmit"><submit button-type="button"/></field>
         <field name="submitButton" use-when="employmentApp!=null" title="Update" widget-style="smallSubmit"><submit button-type="button"/></field>
     </form>
-    <form name="FindJobInterview" type="single" target="FindJobInterview" default-title-style="tableheadtext"
-        default-tooltip-style="tabletext" default-widget-style="inputBox">
+    <form name="FindJobInterview" type="single" target="FindJobInterview">
         <auto-fields-entity entity-name="JobInterview" default-field-type="find"/>
         <field name="noConditionFind"><hidden value="Y"/></field>
         <field name="jobIntervieweePartyId"><lookup target-form-name="LookupPartyName"/></field>
@@ -316,8 +313,7 @@ under the License.
         <field name="submitButton" use-when="JobInterview==null" title="Create" widget-style="smallSubmit"><submit button-type="button"/></field>
         <field name="submitButton" use-when="JobInterview!=null" title="Update" widget-style="smallSubmit"><submit button-type="button"/></field>
     </form>
-    <form name="FindApprovals" target="FindApprovals" type="single" default-title-style="tableheadtext"
-        default-tooltip-style="tabletext" default-widget-style="inputBox">
+    <form name="FindApprovals" target="FindApprovals" type="single">
         <auto-fields-entity entity-name="EmploymentApp" default-field-type="find"/>
         <field name="noConditionFind"><hidden value="Y"/></field>
         <field name="applicationId"><lookup target-form-name="LookupEmploymentApp"/></field>
