Cleanup of the screenlet title in all FTL files. Removed all occurrences of <div class="screenlet-header"><div class="boxhead"></div></div> Replaced with the new <div class="screenlet-title-bar"><div class="h3"></div></div>
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@821476 13f79535-47bb-0310-9956-ffa450edef68

--- a/framework/images/webapp/images/ecommain.css
+++ b/framework/images/webapp/images/ecommain.css
@@ -325,7 +325,7 @@ height:auto!important;
 margin-bottom:10px;
 }
 
-#ecom-mainarea .screenlet-header {
+#ecom-mainarea .screenlet-title-bar {
 background:#1C334D;
 height:auto!important;
 padding:1px 4px 3px;
