Forgot to commit blue light theme and commons screens in r823888 + a better French translation + Follow the same path and fix Bizness Time : right and left were reversed All sounds good now : I will backport
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@823892 13f79535-47bb-0310-9956-ffa450edef68

--- a/themes/bluelight/webapp/bluelight/style.css
+++ b/themes/bluelight/webapp/bluelight/style.css
@@ -760,7 +760,7 @@ DIV.screenlet-body {
     margin-right: 1em;
 }
 
-#column-container .leftLarger {
+#column-container .left-larger {
 float: left;
 /* alt: position: absolute; top: 0px; left: 0px; */
 width: 25em;
@@ -784,6 +784,11 @@ margin-right: 1em;
 
 #column-container .leftonly {
     margin-left: 23em;
+    width: auto;
+}
+
+#column-container .leftonly-larger {
+    margin-left: 26em;
     width: auto;
 }
 
