Added a sort of shadow border to drop-down menus
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@825649 13f79535-47bb-0310-9956-ffa450edef68

--- a/themes/bluelight/webapp/bluelight/style.css
+++ b/themes/bluelight/webapp/bluelight/style.css
@@ -1116,6 +1116,8 @@ padding-bottom: 1em;
     background-color: #B8DFFC;
     z-index:9999;
     width:200px;
+    border-bottom: solid 5px #AFAFAF;
+    border-right: solid 5px #AFAFAF;
 }
 
 #main-navigation ul li ul li a,
