--- a/applications/humanres/widget/forms/LookupForms.xml
+++ b/applications/humanres/widget/forms/LookupForms.xml
@@ -374,4 +374,24 @@ under the License.
         <field name="parentTypeId" title="${uiLabelMap.HumanResPreRequisiteSkill}"><display/></field>
         <field name="description" title="${uiLabelMap.CommonDescription}"><display/></field>
     </form>
+    <form name="LookupLeaveApp" type="single" target="LookupLeaveApp"
+        header-row-style="header-row" default-table-style="basic-table">
+        <auto-fields-entity entity-name="EmplLeave" default-field-type="hidden"/>
+        <field name="leaveApplicationId" title="${uiLabelMap.HumanResLookupApplicationId}"><text-find/></field>
+        <field name="noConditionFind"><hidden value="Y"/><!-- if this isn't there then with all fields empty no query will be done --></field>
+        <field name="submitButton" title="${uiLabelMap.CommonLookup}" widget-style="smallSubmit"><submit button-type="button"/></field>
+    </form>
+    <form name="ListLeaveApps" type="list" list-name="listIt" paginate-target="LookupLeaveApp"
+        odd-row-style="alternate-row" default-table-style="basic-table hover-bar">
+        <actions>
+            <service service-name="performFind" result-map="result" result-map-list="listIt">
+                <field-map field-name="inputFields" from-field="parameters"/>
+                <field-map field-name="entityName" value="EmplLeave"/>
+            </service>
+        </actions>
+        <field name="leaveApplicationId" widget-style="buttontext">
+            <hyperlink also-hidden="false" target-type="plain" description="${leaveApplicationId}" target="javascript:set_value('${leaveApplicationId}')"/>
+        </field>
+        <field name="description"><display/></field>
+    </form>
 </forms>
