Improved screenlet-body handling, patch from Bruno Busco - https://issues.apache.org/jira/browse/OFBIZ-3012.
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@826469 13f79535-47bb-0310-9956-ffa450edef68

--- a/themes/bizznesstime/webapp/bizznesstime/css/style.css
+++ b/themes/bizznesstime/webapp/bizznesstime/css/style.css
@@ -1234,6 +1234,11 @@ div.screenlet-body {
     display:block;
 }
 
+div.no-padding {
+    padding: 0;
+    border: none;
+}
+
 .screenlet-title-bar {
     background-color: #1c334d;
     color: #ffffff;
